Increase z-index of frozen cells for correct rendering (#13334)

--- a/WebContent/VAADIN/themes/base/escalator/escalator.scss
+++ b/WebContent/VAADIN/themes/base/escalator/escalator.scss
@@ -114,7 +114,7 @@ $border-color: #aaa;
 
 .#{$primaryStyleName}-cell.frozen {
 	position: relative;
-	z-index: 0;
+	z-index: 1;
 }
 
 }
